--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2213,5 +2213,49 @@
     "fetchError": "Error loading address. Please try again.",
     "updateSuccess": "Address updated successfully!",
     "updateError": "Failed to update address. Please try again."
+  },
+  "profile": {
+    "title": "User Information",
+    "personalInfo": "Personal Information",
+    "updateHint": "Update your personal details and preferences",
+    "fullName": "Full Name",
+    "emailAddress": "Email Address",
+    "phoneNumber": "Phone Number",
+    "birthDate": "Birth Date",
+    "gender": "Gender",
+    "address": "Address",
+    "editProfile": "Edit Profile",
+    "cancelEdit": "Cancel Edit",
+    "saveChanges": "Save Changes",
+    "saving": "Saving...",
+    "changePassword": "Change Password",
+    "addressList": "Address List",
+    "verifiedAccount": "Verified Account",
+    "pleaseConfirmEmail": "Confirm Email",
+    "pleaseEnterEmail": "Please enter your email to receive OTP",
+    "sendRequest": "Send Request",
+    "sending": "Sending...",
+    "enterOtp": "Enter OTP",
+    "otpInstruction": "Please enter the OTP sent to you.",
+    "notReceiveOtp": "Didn't receive OTP?",
+    "resendIn": "Resend in {{seconds}} seconds",
+    "resendNow": "Resend now",
+    "confirmOtp": "Confirm OTP",
+    "fieldsRequired": "All fields are required",
+    "passwordMismatch": "New password doesn't match",
+    "passwordSameAsOld": "New password must be different from current",
+    "passwordChangedSuccess": "Password changed successfully",
+    "otpSent": "OTP has been sent",
+    "otpSendFailRetry": "Failed to send OTP, please try again",
+    "editHint": "Make sure all information is correct before saving changes.",
+    "enterFullName": "Enter your full name",
+    "enterPhone": "Enter your phone number",
+    "enterAddress": "Enter your full address",
+    "emailNoChange": "Email cannot be changed for security reasons",
+    "currentPassword": "Current Password",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm New Password",
+    "updatePassword": "Update Password",
+    "updating": "Updating..."
   }
 }
