--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -423,7 +423,7 @@
       "userAndWarehouse": "Người Dùng/Kho",
       "supplierRequest": "Yêu Cầu Thu/Cung Cấp Nguyên Liệu",
       "materialAndPackaging": "Nguyên Liệu Thô/Bao Bì",
-      "productionPlan" : "Kế Hoạch Sản Xuất",
+      "productionPlan": "Kế Hoạch Sản Xuất",
       "finishedProduct": "Thành Phẩm"
     },
     "card": {
@@ -2196,5 +2196,49 @@
     "fetchError": "Lỗi khi tải địa chỉ. Vui lòng thử lại!",
     "updateSuccess": "Cập nhật địa chỉ thành công!",
     "updateError": "Cập nhật địa chỉ thất bại. Vui lòng thử lại!"
+  },
+  "profile": {
+    "title": "Thông tin người dùng",
+    "personalInfo": "Thông tin cá nhân",
+    "updateHint": "Cập nhật thông tin cá nhân và tùy chọn",
+    "fullName": "Họ và tên",
+    "emailAddress": "Email",
+    "phoneNumber": "Số điện thoại",
+    "birthDate": "Ngày sinh",
+    "gender": "Giới tính",
+    "address": "Địa chỉ",
+    "editProfile": "Chỉnh sửa hồ sơ",
+    "cancelEdit": "Hủy chỉnh sửa",
+    "saveChanges": "Lưu thay đổi",
+    "saving": "Đang lưu...",
+    "changePassword": "Đổi mật khẩu",
+    "addressList": "Danh sách địa chỉ",
+    "verifiedAccount": "Tài khoản đã xác thực",
+    "pleaseConfirmEmail": "Xác nhận email",
+    "pleaseEnterEmail": "Vui lòng nhập email để nhận OTP",
+    "sendRequest": "Gửi yêu cầu",
+    "sending": "Đang gửi...",
+    "enterOtp": "Nhập mã OTP",
+    "otpInstruction": "Vui lòng nhập mã OTP đã gửi tới bạn.",
+    "notReceiveOtp": "Không nhận được OTP?",
+    "resendIn": "Gửi lại trong {{seconds}} giây",
+    "resendNow": "Gửi lại ngay",
+    "confirmOtp": "Xác nhận OTP",
+    "fieldsRequired": "Vui lòng điền đầy đủ thông tin",
+    "passwordMismatch": "Mật khẩu mới không khớp",
+    "passwordSameAsOld": "Mật khẩu mới phải khác mật khẩu hiện tại",
+    "passwordChangedSuccess": "Đổi mật khẩu thành công",
+    "otpSent": "OTP đã được gửi",
+    "otpSendFailRetry": "Gửi OTP thất bại, hãy thử lại",
+    "editHint": "Hãy chắc chắn rằng thông tin đã chính xác trước khi lưu.",
+    "enterFullName": "Nhập họ và tên",
+    "enterPhone": "Nhập số điện thoại",
+    "enterAddress": "Nhập địa chỉ đầy đủ",
+    "emailNoChange": "Email không thể thay đổi vì lý do bảo mật",
+    "currentPassword": "Mật khẩu hiện tại",
+    "newPassword": "Mật khẩu mới",
+    "confirmPassword": "Xác nhận mật khẩu mới",
+    "updatePassword": "Cập nhật mật khẩu",
+    "updating": "Đang cập nhật..."
   }
 }
